--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   padding: 15px;
 }
 
+.LinkT{
+  text-decoration: none;
+  color: black;
+}
 @media screen and (max-width: 480px) {
   .Imd{
      height: 100%;
